# bf-interpreter

./: .gitignore  CMakeLists.txt  Makefile  README.md  compiler.cpp  input.txt  interpreter.cpp  main.cpp  math.hpp  parser.hpp  report.tex  run_test.sh  test.cpp  test.py  util.hpp  vcpkg.json  vec_test.cpp
benches/: bench.b  bottles.b  deadcodetest.b  long.b  loopremove.b  test1.b  test2.b  twinkle.b  twinkle.b.out.txt
testing/benches/: hanoi.b  hello.b  serptri.b
